# CV_HW3

./: .gitignore  README.md
2dgs_aigc/: README.md  env_sdi.yml  requirements_common.txt  requirements_env_colmap.txt  requirements_env_gs.txt  requirements_env_magic123.txt  requirements_env_sdi.txt  requirements_env_threestudio.txt
2dgs_aigc/configs/: background.yaml  fusion.yaml  objectA.yaml  objectB.yaml  objectC.yaml
2dgs_aigc/script/: blender_fusion.py  conda_init.sh  export_meshes.sh  install_2dgs_deps.sh  plot_training_curves.py  run_background.sh  run_fusion_render.sh  run_objectA.sh  run_objectB.sh  run_objectB_export.sh  run_objectC.sh
2dgs_aigc/src/fusion/: export_assets.py
2dgs_aigc/src/image_to_3d/: pipeline.py  run_objectC.py
2dgs_aigc/src/reconstruction/: colmap_utils.py  pipeline.py  run_background.py  run_objectA.py
2dgs_aigc/src/text_to_3d/: pipeline.py  run_objectB.py
2dgs_aigc/src/utils/: conda_cfg.py  config.py  cuda.py  cuda_env.py  io.py  paths.py  runner.py  template.py  wandb_utils.py
ACT/: apply_patch.sh  pyproject.toml  requirements.txt
ACT/docs/: troubleshooting.md
ACT/scripts/: eval_zero_shot.sh  offline_replay_visualize.sh  sim_rollout.sh  train_joint.sh
ACT/src/crossenv_act/: cli.py  data_prep.py  eval.py  offline_replay.py  sim_rollout.py  train.py  train_metrics.py
task2/: README.md  apply_patch.sh  environment.yml
task2/configs/: default.yaml
task2/docs/: report_checklist.md
task2/scripts/: eval_zero_shot.sh  train_basic.sh
task2/src/calvin_act_crossenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+2 more)
(+9 files in other folders)
